--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -48,6 +48,10 @@ data:
         metrics_path: /metrics
         static_configs:
           - targets: ['tautulli-library-exporter.monitoring.svc.cluster.local:9101']
+      - job_name: trivy-operator
+        metrics_path: /metrics
+        static_configs:
+          - targets: ['trivy-operator.trivy-system.svc.cluster.local:8080']
   alert_rules.yml: |
     groups:
       - name: kubernetes-pods
@@ -130,3 +134,21 @@ data:
             annotations:
               summary: Traefik VIP down
               description: VIP {{ $labels.vip }} is not reachable from the cluster.
+      - name: trivy-vulnerabilities
+        rules:
+          - alert: TrivyCriticalVulnerabilities
+            expr: sum by (namespace, resource_kind, resource_name, image_repository, image_tag) (trivy_image_vulnerabilities{severity="Critical"}) > 0
+            for: 5m
+            labels:
+              severity: critical
+            annotations:
+              summary: Critical image vulnerabilities detected
+              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} Critical vulnerabilities."
+          - alert: TrivyHighVulnerabilities
+            expr: sum by (namespace, resource_kind, resource_name, image_repository, image_tag) (trivy_image_vulnerabilities{severity="High"}) > 0
+            for: 5m
+            labels:
+              severity: high
+            annotations:
+              summary: High image vulnerabilities detected
+              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} High vulnerabilities."
