--- a/apps/monitoring/karma-deployment.yaml
+++ b/apps/monitoring/karma-deployment.yaml
@@ -19,8 +19,9 @@ spec:
         - name: karma
           image: ghcr.io/prymitive/karma:latest
           args:
-            - "--alertmanager.server=http://alertmanager.monitoring.svc.cluster.local:9093"
-            - "--listen.address=0.0.0.0:8080"
+            - "--alertmanager.uri=http://alertmanager.monitoring.svc.cluster.local:9093"
+            - "--listen.address=0.0.0.0"
+            - "--listen.port=8080"
             - "--ui.title=Alerts"
           ports:
             - name: http
