--- a/apps/monitoring/prometheus-deployment.yaml
+++ b/apps/monitoring/prometheus-deployment.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     app.kubernetes.io/name: prometheus
 spec:
+  strategy:
+    type: Recreate
   replicas: 1
   selector:
     matchLabels:
