Add namespace quotas and default limits

--- a/apps/apps/kustomization.yaml
+++ b/apps/apps/kustomization.yaml
@@ -22,3 +22,5 @@ resources:
   - gitea-ingress.yaml
   - gitea-ssh-ingressroute.yaml
   - gitea-secrets.sops.yaml
+  - resourcequota.yaml
+  - limitrange.yaml
