--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -31,3 +31,5 @@ resources:
   - traefik-external-ingressroutes.yaml
   - traefik-proxmox-transport.yaml
   - romanpeters-wildcard-cert.yaml
+  - resourcequota.yaml
+  - limitrange.yaml
