--- a/apps/automation/kustomization.yaml
+++ b/apps/automation/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - namespace.yaml
   - github.com/ansible/awx-operator/config/default?ref=2.19.1
   - awx.yaml
+  - resourcequota.yaml
+  - limitrange.yaml
 patches:
   - target:
       kind: Namespace
