--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -11,9 +11,13 @@ resources:
   - external-dns-rbac.yaml
   - external-dns.sops.yaml
   - external-dns-deployment.yaml
+  - external-dns-resourcequota.yaml
+  - external-dns-limitrange.yaml
   - trivy-operator-namespace.yaml
   - trivy-operator-helmrepo.yaml
   - trivy-operator-helmrelease.yaml
+  - trivy-system-resourcequota.yaml
+  - trivy-system-limitrange.yaml
   - traefik-helmchartconfig.yaml
   - traefik-dashboard-ingressroute.yaml
   - traefik-internal-service.yaml
