--- a/apps/automation/kustomization.yaml
+++ b/apps/automation/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - awx.yaml
   - resourcequota.yaml
   - limitrange.yaml
+  - networkpolicy.yaml
 patches:
   - target:
       kind: Namespace
