Fix Traefik VIP probe host

--- a/apps/monitoring/blackbox-exporter-configmap.yaml
+++ b/apps/monitoring/blackbox-exporter-configmap.yaml
@@ -12,7 +12,7 @@ data:
         http:
           method: GET
           headers:
-            Host: auth.romanpeters.nl
+            Host: homepage.romanpeters.nl
           valid_http_versions:
             - HTTP/1.1
             - HTTP/2
