--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -137,18 +137,18 @@ data:
       - name: trivy-vulnerabilities
         rules:
           - alert: TrivyCriticalVulnerabilities
-            expr: sum by (namespace, resource_kind, resource_name, image_repository, image_tag) (trivy_image_vulnerabilities{severity="Critical"}) > 0
-            for: 5m
+            expr: sum by (namespace) (trivy_image_vulnerabilities{severity="Critical",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"}) > 0
+            for: 10m
             labels:
               severity: critical
             annotations:
               summary: Critical image vulnerabilities detected
-              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} Critical vulnerabilities."
+              description: "Namespace {{ $labels.namespace }} has {{ $value }} Critical image vulnerabilities."
           - alert: TrivyHighVulnerabilities
-            expr: sum by (namespace, resource_kind, resource_name, image_repository, image_tag) (trivy_image_vulnerabilities{severity="High"}) > 0
-            for: 5m
+            expr: sum by (namespace) (trivy_image_vulnerabilities{severity="High",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"}) > 0
+            for: 10m
             labels:
               severity: high
             annotations:
               summary: High image vulnerabilities detected
-              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} High vulnerabilities."
+              description: "Namespace {{ $labels.namespace }} has {{ $value }} High image vulnerabilities."
