--- a/apps/general/heimdall-deployment.yaml
+++ b/apps/general/heimdall-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: heimdall
-          image: linuxserver/heimdall:2.5.8
+          image: lscr.io/linuxserver/heimdall:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
