--- a/apps/media/immich-machine-learning.yaml
+++ b/apps/media/immich-machine-learning.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: immich-machine-learning
-          image: ghcr.io/immich-app/immich-machine-learning:release
+          image: ghcr.io/immich-app/immich-machine-learning:v2.5.6
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
