--- a/apps/media/immich-server.yaml
+++ b/apps/media/immich-server.yaml
@@ -31,7 +31,7 @@ spec:
               mountPath: /data
       containers:
         - name: immich-server
-          image: ghcr.io/immich-app/immich-server:release
+          image: ghcr.io/immich-app/immich-server:v2.5.6
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
