--- a/apps/media/overseerr-deployment.yaml
+++ b/apps/media/overseerr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: overseerr
-          image: lscr.io/linuxserver/overseerr:1.34.0
+          image: lscr.io/linuxserver/overseerr:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
