--- a/apps/media/prowlarr-deployment.yaml
+++ b/apps/media/prowlarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: prowlarr
-          image: lscr.io/linuxserver/prowlarr:2.0.5.5160-ls126
+          image: lscr.io/linuxserver/prowlarr:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
