--- a/apps/media/radarr-deployment.yaml
+++ b/apps/media/radarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: radarr
-          image: linuxserver/radarr:5.27.5.10198-ls283
+          image: lscr.io/linuxserver/radarr:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
