--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -30,7 +30,9 @@ data:
         style: row
         columns: 3
   widgets.yaml: |
-    []
+    - audiobookshelf:
+        url: https://books.romanpeters.nl
+        key: ***REDACTED***
   bookmarks.yaml: |
     []
   services.yaml: |
@@ -54,11 +56,6 @@ data:
             href: https://plex.romanpeters.nl
             icon: plex
             siteMonitor: https://plex.romanpeters.nl
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
-        - Audiobookshelf:
-            href: https://books.romanpeters.nl
-            icon: audiobookshelf
-            siteMonitor: https://books.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
         - Calibre Web:
             href: https://ebooks.romanpeters.nl
