--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -31,6 +31,10 @@ resources:
   - grafana-datasource-prometheus.yaml
   - grafana-service.yaml
   - grafana-ingress.yaml
+  - glances-deployment.yaml
+  - glances-service.yaml
+  - glances-ingress.yaml
+  - glances-networkpolicy.yaml
   - changedetection-deployment.yaml
   - changedetection-service.yaml
   - changedetection-ingress.yaml
