Update homepage widget secrets

--- a/apps/infrastructure/homepage-secrets.sops.yaml
+++ b/apps/infrastructure/homepage-secrets.sops.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:9Mg=,iv:1wN5+979Z3YHmthHgJj+fU8H1Wer1cwScsL7zZEd6I4=,tag:9xCGmN1Ug7QBzzEcJ1/YtA==,type:str]
-kind: ENC[AES256_GCM,data:9g2binff,iv:5i5ymD2w+H/H7yLIzqy3LFomnhY44salEGolPZKhQmo=,tag:nAWgrIwJ0GEOyNiCDOEFKQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:xO0=,iv:1mo1pbL3peNiRqOb/Tf0mAOrtLottx5WFPiy3fHVRN4=,tag:RM10IQt2ap36CG6TbH+aag==,type:str]
+kind: ENC[AES256_GCM,data:rLGv0fJ3,iv:+DV8HsO3lqJ3b5Eo+ePennY50mwvjy49c/9w8jv1NeE=,tag:tcdxlTCulkmcbUuIBE0Rbg==,type:str]
 metadata:
-  name: ENC[AES256_GCM,data:7w1OPqMq0MyVOloOErVuRA==,iv:haBGlVHxE/aFhz0uo/zlxMc7L1djZQivUztRGp/r0OA=,tag:/AI6rGtk9j0g6pLFkOIdZw==,type:str]
-  namespace: ENC[AES256_GCM,data:ofZivTPxX3Cs4aBcBQs=,iv:ZTmR1GeiHyU4g1TuweJBvpV5K5jUQaLT2Pf/7UaqGIw=,tag:dY6s04K6/2r6pMkNabZ96g==,type:str]
-type: ENC[AES256_GCM,data:dJJ8/zNH,iv:2AkemGQLE36OBk5rRPGIEr84tJL7dJGUj2gVeNO4de4=,tag:FpBZIhL3Hkh4SSi+CaGQzw==,type:str]
+  name: ENC[AES256_GCM,data:dVuvQmLUYrS9x4t6iJir1A==,iv:k3cqKx3Q+I9HI9oMbWiq8uP9XA+OZ6l4VziJqqCVbOI=,tag:fDb+Pn3N4ovcNOF4ID0PhA==,type:str]
+  namespace: ENC[AES256_GCM,data:jwYSPokRq349v5jHN/A=,iv:+elNCd/L6LxP8vifTfvIkx8rqurwxRJ3wyBHdAOK4rs=,tag:/q7d+l327YFP1fDrY0+bAQ==,type:str]
+type: ENC[AES256_GCM,data:UTCSkAys,iv:RffnPCR/7LTKMadxfKA8C7sNWGVMCHyzsisCBOkjqL4=,tag:xHmcel5JwwPqumIIbvZHXA==,type:str]
 stringData:
-  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:4NEfimvHTkNaJPIdvDagM+y4o0j1KjjaD3RZEeobSYIGNH8jEiMr2CtSd9qsMlly13DnXwQK6xzaIEIK,iv:84S0liSmRPkdOMt/wpH5lPXZ00kt2nWvT7HZ3NDzWDA=,tag:oCVdXVts4l6sDCKtKKx7nw==,type:str]
-  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:EuuqwSCkl17T+OACAgia40PNQi7kmqzUYl9YBYhjqIE=,iv:xKbGBVF+B7gBFK7ZYw27liI1AVu5x2w+FtsfvdDplKc=,tag:p37tP4g1q/Z0trSMWyTXXQ==,type:str]
-  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:aaZfMrNiOMUDV1GWEopMmgRkcFBTsRRLt97apIbIkzsjlNb3rLm8RWzNehgw5IbFLy41ZF6uqYmlZUKHMfRbx1dJ/5PLzAixCn+bfCC1rLq44WQl4/2eQP9TmvLY9P0bHilTUtFM2rF5LrH/bucIfAiZjWyw/51aa+aO8WNoZdWxyTxVM28mGd+uUsvwUQp2aiKIWhe1sVzoLahZ1aniSPqSfd+IkN/jEVV24crEr2KaN9TF5kSHDgyS7sCCKFXw4hNy/BZ/g98OIShZk+BeqQ==,iv:U5kRLKRCWQ1f3/bjTAzuR3GuICAeRHlDcKtSavJNZOI=,tag:HPRwtIJIszkGSVNuRovc9A==,type:str]
+  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:YT+aDuHAvE0c9yyuSAykGqKbUHtfFGVlagPG+OI3Ix8zdzGe5go7L2guCUdQJXEwXLoR7vj628k95nzF,iv:ynOHl+jVyZ0/E/iKOYnHrcb3Q/qetRdj2zJTMNfxNr4=,tag:Bed1D2L0rlB0LxWNjlx2Qw==,type:str]
+  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:AxXwxfOzEu+sGomuGfCQLTpBH2UZJcpvE/zfyIkyhXw=,iv:2yQ1wvaRvvnX6C9636Zww8hwnPGd8r1CY5Yi1AjL+YU=,tag:m9LAByvzyonCBi7YmCHtGQ==,type:str]
+  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:soYE/0R+EJ6KlJFSsX6kmiWSecMIYVwTZvjhtnMw/KlTHMsR5FV0CEALGNjeoKzE4e8xvWKvTJ5Ruqeih0j7yNuTrnw89PRA/fj3yzcSXXHiPV2zy5f2SrbBqDpXchy/GnrEIEoZZkveueo05QOx9VKsPCcawL/x0S92OfcQxrlNRCUHVf4t6Y5bZC7uQzYU2i9VdUvC2KLckWZ2Fe4EUhlh/5QlCyQ2ZJ2ca2VVPOXp4hHoDuoEnXPwg85M52xMjqKJRJwNB+ZVl/RCI3U9UA==,iv:wPOc9iYehKrLjHbO8+u7VTWIXtGOhKH6E7sWlKhZnvE=,tag:nqc6xj+L+hqKpdp8OEbIWQ==,type:str]
 sops:
   age:
     - recipient: age1txdhl8zae9a6kh6ggxydmrtstueysr32dd9fchlrp9x7n3ywhd7qzrn4k4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIWm9UOU5vY0dZVGVSMFpD
-        bHprVXNYUElqWXFsR2htQWh0ck11SVpQUHdrClhYNXFscG8xWGkxMExLQVoyMVhD
-        MXpZRHIzeDJ4QTRFc1JIL2E3T21EakkKLS0tIGYvMUFQa0dEbnVDNFVJUkdZRUpu
-        bGVHZys5RURxVjJpSHRLZ3pyY25Ob2cKhhgorJFX0XYcKxMcUzZthsgVOhX/C1VF
-        GVqKtiVbwwpt8T6QJxMJC6DMDad3anNgp3B5t/rTzFsBhX2E1rbueQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQWxkWjRYdU1Kck04UVB0
+        N2tielh2ckNOZUNDOFhKMGpBT1BFTXFZQ0NnClJHT1NjUXFTcG9iK0NXME5nTVUz
+        azd2MHorS3JmN3I5VTBLeUF2Y1Q5RGcKLS0tIGk1ek4vZUV2S3pMK0JuWDlTd1Jz
+        WU1jMkVjQ1ppclZMRm1HZFF1ZnNPZzAKYxGQ1grWXD01U5rQQKaGTAjKtEgj+M/W
+        mN/LwsGGJXDoG6jMtf14afIX0lglX/cByxqeUU5dAZ3tCIg2RG2eiw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-14T10:56:30Z"
-  mac: ENC[AES256_GCM,data:tE6Xvp50vsZZ8TcYO+EM8ORmYIT80y/tGPrsV9tR6cJYi5Yxp4cZtTO0BqNAKh1ABBwpRK+GLQetuEVop1u1EQYAv824Jav5IaiSU1XXBDvhBXGls+OeCF27wwkJKMDKZbFF/Kcg69g1BSV6FvmVzDpvvgrq6BlwyQpnrPIlABA=,iv:wyFqkXzEKhV3Yl0V6nusf+NSyErcdLsiwuzS+NQilyE=,tag:7q9jGfYCt84xGzyyy3IpQA==,type:str]
+  lastmodified: "2026-02-14T11:22:58Z"
+  mac: ENC[AES256_GCM,data:VXV71phPN1H3YgtCibLCp62FuG3Os2g+yQFi5qxFZqpKqZsbPcTPX0ieV3Fomew4DzGiu59ckJMlPIoVuKt6UJHsOgO//MlfUsKi4gC1kHsO4dQ/e0VJPsJNEhksMSKljSoplJ1JuQYZPldaViI8JBOq/V0fXQrQuBKLJEEEsiM=,iv:AHzivyWwcIKu+ho7/cKfMZdVnJmvWswvAHfeNErzvbw=,tag:f5jDYHma020xBRbO/4dG2g==,type:str]
   unencrypted_suffix: _unencrypted
   version: 3.11.0
