Re-encrypt homepage secrets

--- a/apps/infrastructure/homepage-secrets.sops.yaml
+++ b/apps/infrastructure/homepage-secrets.sops.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:xO0=,iv:1mo1pbL3peNiRqOb/Tf0mAOrtLottx5WFPiy3fHVRN4=,tag:RM10IQt2ap36CG6TbH+aag==,type:str]
-kind: ENC[AES256_GCM,data:rLGv0fJ3,iv:+DV8HsO3lqJ3b5Eo+ePennY50mwvjy49c/9w8jv1NeE=,tag:tcdxlTCulkmcbUuIBE0Rbg==,type:str]
+apiVersion: ENC[AES256_GCM,data:3yU=,iv:ZJj47j8eP2WNOMsBGyqt/4/IVRHbHRAx8mjIg4BQ8/w=,tag:8gm8sSGlBNUeHeUk0KU0Qw==,type:str]
+kind: ENC[AES256_GCM,data:pNinnPIy,iv:rUVc2wicQs6BbO4p5Hi3sxf7EDf0r1gwfiWNYrzl9jY=,tag:yy9yMYS1tW+TxVwLTs4S6g==,type:str]
 metadata:
-  name: ENC[AES256_GCM,data:dVuvQmLUYrS9x4t6iJir1A==,iv:k3cqKx3Q+I9HI9oMbWiq8uP9XA+OZ6l4VziJqqCVbOI=,tag:fDb+Pn3N4ovcNOF4ID0PhA==,type:str]
-  namespace: ENC[AES256_GCM,data:jwYSPokRq349v5jHN/A=,iv:+elNCd/L6LxP8vifTfvIkx8rqurwxRJ3wyBHdAOK4rs=,tag:/q7d+l327YFP1fDrY0+bAQ==,type:str]
-type: ENC[AES256_GCM,data:UTCSkAys,iv:RffnPCR/7LTKMadxfKA8C7sNWGVMCHyzsisCBOkjqL4=,tag:xHmcel5JwwPqumIIbvZHXA==,type:str]
+  name: ENC[AES256_GCM,data:MEQZ+jIMSPzB/1WKBwmTvQ==,iv:5tunw9HKwRF3IJ9Pntb4i8ZWuC3PLT9nR9wKQeMj9VI=,tag:SskHlJ6eO+0Hn48EyT4hrg==,type:str]
+  namespace: ENC[AES256_GCM,data:7XGu0wHAETDXqxisKLg=,iv:iDgawFFrfwZdmp3D7gBxpdYEBd2/FuHbBLrlfqdPX7s=,tag:YJS07/yqUyFXwknDwmrsQQ==,type:str]
+type: ENC[AES256_GCM,data:coFdVaSg,iv:AJLItuC1PNJMwsmEbwDF40NRgMR/reUwQIwMBRC+lOQ=,tag:lAcja8dRmJnPGiYizmlpcg==,type:str]
 stringData:
-  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:YT+aDuHAvE0c9yyuSAykGqKbUHtfFGVlagPG+OI3Ix8zdzGe5go7L2guCUdQJXEwXLoR7vj628k95nzF,iv:ynOHl+jVyZ0/E/iKOYnHrcb3Q/qetRdj2zJTMNfxNr4=,tag:Bed1D2L0rlB0LxWNjlx2Qw==,type:str]
-  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:AxXwxfOzEu+sGomuGfCQLTpBH2UZJcpvE/zfyIkyhXw=,iv:2yQ1wvaRvvnX6C9636Zww8hwnPGd8r1CY5Yi1AjL+YU=,tag:m9LAByvzyonCBi7YmCHtGQ==,type:str]
-  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:soYE/0R+EJ6KlJFSsX6kmiWSecMIYVwTZvjhtnMw/KlTHMsR5FV0CEALGNjeoKzE4e8xvWKvTJ5Ruqeih0j7yNuTrnw89PRA/fj3yzcSXXHiPV2zy5f2SrbBqDpXchy/GnrEIEoZZkveueo05QOx9VKsPCcawL/x0S92OfcQxrlNRCUHVf4t6Y5bZC7uQzYU2i9VdUvC2KLckWZ2Fe4EUhlh/5QlCyQ2ZJ2ca2VVPOXp4hHoDuoEnXPwg85M52xMjqKJRJwNB+ZVl/RCI3U9UA==,iv:wPOc9iYehKrLjHbO8+u7VTWIXtGOhKH6E7sWlKhZnvE=,tag:nqc6xj+L+hqKpdp8OEbIWQ==,type:str]
+  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:Oy265TCSpXFIsgH0SP2kmkbsHP2cHnkqm5WGSOZJ8/NryKWZVPaodavwvVgRuX0DSeqkHHwNPpO61VrS,iv:ePhG5Itw8wb0FSnSR91PLuFmZJixAtHyGUcr49zV0EA=,tag:v8MZwGm6urmeuAyv0GuEMA==,type:str]
+  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:es6onsq6cRlcWSmvxDK/Iq/utAwHPeXL0Ag322vwYoM=,iv:xS2j0P//JCPzsbMykTGRMhTXyzcLh8tWBMFTcwobxR4=,tag:sypdn+Px+GN+aQwvX/HFRA==,type:str]
+  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:UlBXN8oxMUxwoK0mih12/IekxPz6jskRBPqKNJFEsJ3+Gg/r1Rla9DXzSq1sGi44aplxUSGFEYm1fX0FR/4LNMRwp7+3KKTOcoSzu3G+zmBddG+lxU2nusyFBKQqiIUzjcGAqRdRSc5vb88bJIjklHSBgtw5HYcWpn4IMEDMX7D9PuVk6PLo2gk5auXY9GUdQy3rUu25IWwVpIvuZ/JbVNJwrTGrIxU8YgXzgtpTcKegp0h9t78F/5BRQVkA5ImG3UquQmqiqQRRznuortHtEg==,iv:tAt88z5sf3b+FejXEhUotpKx313pXgWCmcz7y6LGXmQ=,tag:fOmE3ufSyjYJ9jwuJ9tv1A==,type:str]
 sops:
   age:
     - recipient: age1txdhl8zae9a6kh6ggxydmrtstueysr32dd9fchlrp9x7n3ywhd7qzrn4k4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQWxkWjRYdU1Kck04UVB0
-        N2tielh2ckNOZUNDOFhKMGpBT1BFTXFZQ0NnClJHT1NjUXFTcG9iK0NXME5nTVUz
-        azd2MHorS3JmN3I5VTBLeUF2Y1Q5RGcKLS0tIGk1ek4vZUV2S3pMK0JuWDlTd1Jz
-        WU1jMkVjQ1ppclZMRm1HZFF1ZnNPZzAKYxGQ1grWXD01U5rQQKaGTAjKtEgj+M/W
-        mN/LwsGGJXDoG6jMtf14afIX0lglX/cByxqeUU5dAZ3tCIg2RG2eiw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiOE9oL1QzRW9aMUxLaks4
+        QzdmbkxBUVNWUW9WWDlxdkp4UkxwK0lzRHhrClhJeW9mdXRLY0xtd25BcnBESVU2
+        SDlQRVdLSzRJZkNnVldwWWJGdlJyRE0KLS0tIDRBNzBKdUVVWlJORzZKd0Y0TG5z
+        SWYyYWNwTVhSYkswMDRpQ3RMYVNMSXMKQb2++GB+jUxwGJuZBlF0GJMlisEw9vOF
+        YNYVU/Zj7Mjudo7UOTwXuMpGBGZA2ssZyMRGlVH3m7a2A7L7cJMSZQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-14T11:22:58Z"
-  mac: ENC[AES256_GCM,data:VXV71phPN1H3YgtCibLCp62FuG3Os2g+yQFi5qxFZqpKqZsbPcTPX0ieV3Fomew4DzGiu59ckJMlPIoVuKt6UJHsOgO//MlfUsKi4gC1kHsO4dQ/e0VJPsJNEhksMSKljSoplJ1JuQYZPldaViI8JBOq/V0fXQrQuBKLJEEEsiM=,iv:AHzivyWwcIKu+ho7/cKfMZdVnJmvWswvAHfeNErzvbw=,tag:f5jDYHma020xBRbO/4dG2g==,type:str]
+  lastmodified: "2026-02-14T11:32:11Z"
+  mac: ENC[AES256_GCM,data:UeyxI7yKnYEn1i9fqs/NG6yJcnw9B7AqPwlLZepMBcqYnzTKQB38k46J9PcF7MUV3thRxZzAqTMAYPTShkrZngiNsQvazm1tvsefkHGp2+bfIGNs8nf0onjYCOZN/c4d2kLFfts8iG1JMkHLNg5m3xainyffj53ZQEdsSbvVMlc=,iv:vvQtCq7iZNzyPZmQDAhOWiGb3+o7GreH8ybr2KwrvUk=,tag:xnOgwCULGGEiFY6DWW7hhg==,type:str]
   unencrypted_suffix: _unencrypted
   version: 3.11.0
