Fix homepage secrets encryption format

--- a/apps/infrastructure/homepage-secrets.sops.yaml
+++ b/apps/infrastructure/homepage-secrets.sops.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:3yU=,iv:ZJj47j8eP2WNOMsBGyqt/4/IVRHbHRAx8mjIg4BQ8/w=,tag:8gm8sSGlBNUeHeUk0KU0Qw==,type:str]
-kind: ENC[AES256_GCM,data:pNinnPIy,iv:rUVc2wicQs6BbO4p5Hi3sxf7EDf0r1gwfiWNYrzl9jY=,tag:yy9yMYS1tW+TxVwLTs4S6g==,type:str]
+apiVersion: v1
+kind: Secret
 metadata:
-  name: ENC[AES256_GCM,data:MEQZ+jIMSPzB/1WKBwmTvQ==,iv:5tunw9HKwRF3IJ9Pntb4i8ZWuC3PLT9nR9wKQeMj9VI=,tag:SskHlJ6eO+0Hn48EyT4hrg==,type:str]
-  namespace: ENC[AES256_GCM,data:7XGu0wHAETDXqxisKLg=,iv:iDgawFFrfwZdmp3D7gBxpdYEBd2/FuHbBLrlfqdPX7s=,tag:YJS07/yqUyFXwknDwmrsQQ==,type:str]
-type: ENC[AES256_GCM,data:coFdVaSg,iv:AJLItuC1PNJMwsmEbwDF40NRgMR/reUwQIwMBRC+lOQ=,tag:lAcja8dRmJnPGiYizmlpcg==,type:str]
+  name: homepage-secrets
+  namespace: infrastructure
+type: Opaque
 stringData:
-  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:Oy265TCSpXFIsgH0SP2kmkbsHP2cHnkqm5WGSOZJ8/NryKWZVPaodavwvVgRuX0DSeqkHHwNPpO61VrS,iv:ePhG5Itw8wb0FSnSR91PLuFmZJixAtHyGUcr49zV0EA=,tag:v8MZwGm6urmeuAyv0GuEMA==,type:str]
-  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:es6onsq6cRlcWSmvxDK/Iq/utAwHPeXL0Ag322vwYoM=,iv:xS2j0P//JCPzsbMykTGRMhTXyzcLh8tWBMFTcwobxR4=,tag:sypdn+Px+GN+aQwvX/HFRA==,type:str]
-  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:UlBXN8oxMUxwoK0mih12/IekxPz6jskRBPqKNJFEsJ3+Gg/r1Rla9DXzSq1sGi44aplxUSGFEYm1fX0FR/4LNMRwp7+3KKTOcoSzu3G+zmBddG+lxU2nusyFBKQqiIUzjcGAqRdRSc5vb88bJIjklHSBgtw5HYcWpn4IMEDMX7D9PuVk6PLo2gk5auXY9GUdQy3rUu25IWwVpIvuZ/JbVNJwrTGrIxU8YgXzgtpTcKegp0h9t78F/5BRQVkA5ImG3UquQmqiqQRRznuortHtEg==,iv:tAt88z5sf3b+FejXEhUotpKx313pXgWCmcz7y6LGXmQ=,tag:fOmE3ufSyjYJ9jwuJ9tv1A==,type:str]
+  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:cP1aJZ+acoPWGaSFaaewXRVR98fogo/Q5d6Z4c55NmsFV1aEz2XQjuBiygttQR3aus4RZ8azlL6rEGyn,iv:DltoMOBwuCY8KGPt6WtM3vmdOa/Jy/V95IUd4pMo6ZA=,tag:XFpxBJmoN3C2kMEbv7zJ5Q==,type:str]
+  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:jnHgnigl+k2IJqzDALzGmubCz0/kP3ArFqvMCVzZtLM=,iv:JcZe+BcoCd43eviP7a9fk+UlpT99vFuAeSB/5Nu75W0=,tag:FJm3gS+J515b/ru4LUIEIA==,type:str]
+  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:mWP22JQqckOHkpmb3s8oYRTUbiD7ig3cttBMJk8nDrcOz57P8/oaVu/o1FPR5gmAfXRHdqe5WNtdrX/L6nn9hAItd1kFxPNqpavbuvrZy+m9Nx0m5U637sgMDD7B9bVSmDPxx8afjEQbb54V+LmmrZ7/0Go/E0w1C2Nz8Vh7d77tDVUqHstjivFNZag7XfolnkzfuksNlndb0l36NT3GymeBzljK7og9DXP6vy/C5bJ4bTfxjYNt2cG1mjGLBVYGvhVonR8Nv2heCDHOsur+og==,iv:JNjmxQHHugsNTIro7guhVsS3Qe60gdMEigOk64N+luQ=,tag:mL0ug352qLv7L3LhBy2zjA==,type:str]
 sops:
   age:
     - recipient: age1txdhl8zae9a6kh6ggxydmrtstueysr32dd9fchlrp9x7n3ywhd7qzrn4k4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiOE9oL1QzRW9aMUxLaks4
-        QzdmbkxBUVNWUW9WWDlxdkp4UkxwK0lzRHhrClhJeW9mdXRLY0xtd25BcnBESVU2
-        SDlQRVdLSzRJZkNnVldwWWJGdlJyRE0KLS0tIDRBNzBKdUVVWlJORzZKd0Y0TG5z
-        SWYyYWNwTVhSYkswMDRpQ3RMYVNMSXMKQb2++GB+jUxwGJuZBlF0GJMlisEw9vOF
-        YNYVU/Zj7Mjudo7UOTwXuMpGBGZA2ssZyMRGlVH3m7a2A7L7cJMSZQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBreWNYOHg4aStldmFZMjQ0
+        VXp2OVZseWRZUEUxaksyejdrRHplSkRTUERvClV5ZFQ3bDBOcWtTSlY2ZjBsbkRI
+        OGdTUkJuK0tOYmV2cWNNL2lrdXVDOUEKLS0tIFd2WjY5WTk5TzhmUVRSTEZlYlc4
+        NW5mVC9QQUV5LzdjWmREYld6TjNYZG8KOdGvBYmoFVE1i5IPWefiID8MeKF97qbN
+        SLrJGUQ8RcNJ+p2bqQGJjXjbT8jsTOAMhy8j1CTyvM/sZdfstFA0CQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-14T11:32:11Z"
-  mac: ENC[AES256_GCM,data:UeyxI7yKnYEn1i9fqs/NG6yJcnw9B7AqPwlLZepMBcqYnzTKQB38k46J9PcF7MUV3thRxZzAqTMAYPTShkrZngiNsQvazm1tvsefkHGp2+bfIGNs8nf0onjYCOZN/c4d2kLFfts8iG1JMkHLNg5m3xainyffj53ZQEdsSbvVMlc=,iv:vvQtCq7iZNzyPZmQDAhOWiGb3+o7GreH8ybr2KwrvUk=,tag:xnOgwCULGGEiFY6DWW7hhg==,type:str]
-  unencrypted_suffix: _unencrypted
+  lastmodified: "2026-02-14T11:35:50Z"
+  mac: ENC[AES256_GCM,data:fyz1laJ4ohzj+b9VwvF2FLsjlU1kMFpMcu5DnUioatnUF/CD+78je++enZouyr6v3Ia3lgChXk1fq7WJZF+Q2Lu8DMFTymfP8mNk++f/OypCK+HOKmzO8/PGHHCBbgvkYWEtc/BJaHH+UULQUHzus4oyev4E6SsAsVWU6aWG/4U=,iv:9ZIgXk/KJkTy8z+fAY+FHtz68vTRxNaKiWaEcQ+vjyw=,tag:yblEyJFttEj6Yt8WepUz6A==,type:str]
+  encrypted_regex: ^(stringData)$
   version: 3.11.0
